--- a/menu.css
+++ b/menu.css
@@ -21,15 +21,15 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: #0d1acf;
-    color: #080808;
+    background-color: hsl(276, 83%, 66%);
+    color: #ffffff;
     text-decoration: none;
     padding: 10px 12px;
     display: block;
 }
 
 .nav li a:hover {
-    background-color: #ef04e3;
+    background-color: #000000;
 }
 
 .nav li ul {
