--- a/estilos.css
+++ b/estilos.css
@@ -5,14 +5,14 @@
     font-size: 30px;
     padding-top: 140px;
     text-align: justify;
-    color: rgb(244, 243, 243);
+    color: rgb(0, 0, 0);
 }
 .principal{
    display: flex;
      
 }
 body{
-    background-image: url(fondo\ pagina.webp);
+    background-image: url(FONDO\ 2.jpeg);
 
     
 
